# musage

./: Cargo.toml  Justfile  README.md
.cargo/: audit.toml
.github/workflows/: audit.yaml  cd.yaml  manual_test.yaml
src/: bar.rs  colorizer.rs  driver.rs  lib.rs  main.rs  reader.rs  stats.rs  writer.rs
