[package]
name = "musage"
version = "0.1.1"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🧵 A command line memory usage information tool."
categories = ["command-line-utilities", "filesystem"]
keywords = ["memory",  "ram", "ram-usage"]
repository = "https://github.com/mihaigalos/musage"
license = "MIT"

[dependencies]
autoclap = "0.2.2"
byte-unit = "4.0.14"
clap = { version = "3.2.22", features = ["cargo"] }
colored = "2"
procfs = "0.14.1"
