[package]
name = "musage"
version = "0.1.5"
edition = "2021"
authors = ["Mihai Galos <mihai@galos.one>"]
description = "🧵 A command line memory usage information tool."
categories = ["command-line-utilities", "filesystem"]
keywords = ["memory",  "ram", "ram-usage"]
repository = "https://github.com/mihaigalos/musage"
license = "MIT"

[dependencies]
autoclap = "0.3.15"
byte-unit = "4.0.19"
clap = { version = "4.4.4", features = ["cargo", "string"] }
colored = "2"
procfs = "0.15.1"
